# docln-fetch

./: .gitignore  CLAUDE.md  Cargo.toml
epub_13694/OEBPS/: content.opf  toc.ncx
epub_13694/OEBPS/text/volume_001/: chapter_001.xhtml  chapter_002.xhtml
epub_13694/OEBPS/text/volume_002/: chapter_001.xhtml  chapter_002.xhtml  chapter_003.xhtml  chapter_004.xhtml  chapter_005.xhtml  chapter_006.xhtml  chapter_007.xhtml  chapter_008.xhtml  chapter_009.xhtml  chapter_010.xhtml  chapter_011.xhtml  chapter_012.xhtml  chapter_013.xhtml  chapter_014.xhtml  chapter_015.xhtml  chapter_016.xhtml  chapter_017.xhtml  chapter_018.xhtml
epub_13694/OEBPS/text/volume_003/: chapter_001.xhtml  chapter_002.xhtml  chapter_003.xhtml  chapter_004.xhtml  chapter_005.xhtml  chapter_006.xhtml  chapter_007.xhtml  chapter_008.xhtml  chapter_009.xhtml  chapter_010.xhtml  chapter_011.xhtml  chapter_012.xhtml  chapter_013.xhtml  chapter_014.xhtml  chapter_015.xhtml  chapter_016.xhtml  chapter_017.xhtml  chapter_018.xhtml  chapter_019.xhtml  chapter_020.xhtml  chapter_021.xhtml  chapter_022.xhtml
epub_13694/OEBPS/text/volume_004/: chapter_001.xhtml
epub_13694/OEBPS/text/volume_005/: chapter_001.xhtml  chapter_002.xhtml  chapter_003.xhtml  chapter_004.xhtml  chapter_005.xhtml  chapter_006.xhtml  chapter_007.xhtml
src/: crawler.rs  epub.rs  lib.rs  main.rs  models.rs  utils.rs
src/crawler/: downloader.rs  mod.rs  parser.rs  processor.rs
src/epub/: chapter.rs  compression.rs  metadata.rs  mod.rs  volume.rs
